// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`staionList should render a single station 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <List
    containerStyle={
        Object {
            "marginBottom": 20,
          }
    }
>
    <ListItem
        chevronColor="#bdc6cf"
        disabled={false}
        hideChevron={false}
        leftIconUnderlayColor="white"
        rightIcon={
            Object {
                "name": "chevron-right",
              }
        }
        rightTitleNumberOfLines={1}
        roundAvatar={false}
        selectedBackgroundColor="grey"
        subtitleNumberOfLines={1}
        switchButton={false}
        textInputEditable={true}
        title="Bakerloo - Good service"
        titleNumberOfLines={1}
        underlayColor="white"
    />
</List>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <ListItem
          chevronColor="#bdc6cf"
          disabled={false}
          hideChevron={false}
          leftIconUnderlayColor="white"
          rightIcon={
                    Object {
                              "name": "chevron-right",
                            }
          }
          rightTitleNumberOfLines={1}
          roundAvatar={false}
          selectedBackgroundColor="grey"
          subtitleNumberOfLines={1}
          switchButton={false}
          textInputEditable={true}
          title="Bakerloo - Good service"
          titleNumberOfLines={1}
          underlayColor="white"
/>,
      ],
      "style": Array [
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#bbb",
          "borderTopWidth": 1,
          "marginTop": 20,
        },
        Object {
          "marginBottom": 20,
        },
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "BAKERLOO",
        "nodeType": "function",
        "props": Object {
          "chevronColor": "#bdc6cf",
          "disabled": false,
          "hideChevron": false,
          "leftIconUnderlayColor": "white",
          "rightIcon": Object {
            "name": "chevron-right",
          },
          "rightTitleNumberOfLines": 1,
          "roundAvatar": false,
          "selectedBackgroundColor": "grey",
          "subtitleNumberOfLines": 1,
          "switchButton": false,
          "textInputEditable": true,
          "title": "Bakerloo - Good service",
          "titleNumberOfLines": 1,
          "underlayColor": "white",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <ListItem
            chevronColor="#bdc6cf"
            disabled={false}
            hideChevron={false}
            leftIconUnderlayColor="white"
            rightIcon={
                        Object {
                                    "name": "chevron-right",
                                  }
            }
            rightTitleNumberOfLines={1}
            roundAvatar={false}
            selectedBackgroundColor="grey"
            subtitleNumberOfLines={1}
            switchButton={false}
            textInputEditable={true}
            title="Bakerloo - Good service"
            titleNumberOfLines={1}
            underlayColor="white"
/>,
        ],
        "style": Array [
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#bbb",
            "borderTopWidth": 1,
            "marginTop": 20,
          },
          Object {
            "marginBottom": 20,
          },
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "BAKERLOO",
          "nodeType": "function",
          "props": Object {
            "chevronColor": "#bdc6cf",
            "disabled": false,
            "hideChevron": false,
            "leftIconUnderlayColor": "white",
            "rightIcon": Object {
              "name": "chevron-right",
            },
            "rightTitleNumberOfLines": 1,
            "roundAvatar": false,
            "selectedBackgroundColor": "grey",
            "subtitleNumberOfLines": 1,
            "switchButton": false,
            "textInputEditable": true,
            "title": "Bakerloo - Good service",
            "titleNumberOfLines": 1,
            "underlayColor": "white",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`staionList should render all stations 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <List
    containerStyle={
        Object {
            "marginBottom": 20,
          }
    }
>
    <ListItem
        chevronColor="#bdc6cf"
        disabled={false}
        hideChevron={false}
        leftIconUnderlayColor="white"
        rightIcon={
            Object {
                "name": "chevron-right",
              }
        }
        rightTitleNumberOfLines={1}
        roundAvatar={false}
        selectedBackgroundColor="grey"
        subtitleNumberOfLines={1}
        switchButton={false}
        textInputEditable={true}
        title="Bakerloo - Good service"
        titleNumberOfLines={1}
        underlayColor="white"
    />
    <ListItem
        chevronColor="#bdc6cf"
        disabled={false}
        hideChevron={false}
        leftIconUnderlayColor="white"
        rightIcon={
            Object {
                "name": "chevron-right",
              }
        }
        rightTitleNumberOfLines={1}
        roundAvatar={false}
        selectedBackgroundColor="grey"
        subtitleNumberOfLines={1}
        switchButton={false}
        textInputEditable={true}
        title="Central - Good service"
        titleNumberOfLines={1}
        underlayColor="white"
    />
    <ListItem
        chevronColor="#bdc6cf"
        disabled={false}
        hideChevron={false}
        leftIconUnderlayColor="white"
        rightIcon={
            Object {
                "name": "chevron-right",
              }
        }
        rightTitleNumberOfLines={1}
        roundAvatar={false}
        selectedBackgroundColor="grey"
        subtitleNumberOfLines={1}
        switchButton={false}
        textInputEditable={true}
        title="District - Good service"
        titleNumberOfLines={1}
        underlayColor="white"
    />
    <ListItem
        chevronColor="#bdc6cf"
        disabled={false}
        hideChevron={false}
        leftIconUnderlayColor="white"
        rightIcon={
            Object {
                "name": "chevron-right",
              }
        }
        rightTitleNumberOfLines={1}
        roundAvatar={false}
        selectedBackgroundColor="grey"
        subtitleNumberOfLines={1}
        switchButton={false}
        textInputEditable={true}
        title="Circle - Good service"
        titleNumberOfLines={1}
        underlayColor="white"
    />
    <ListItem
        chevronColor="#bdc6cf"
        disabled={false}
        hideChevron={false}
        leftIconUnderlayColor="white"
        rightIcon={
            Object {
                "name": "chevron-right",
              }
        }
        rightTitleNumberOfLines={1}
        roundAvatar={false}
        selectedBackgroundColor="grey"
        subtitleNumberOfLines={1}
        switchButton={false}
        textInputEditable={true}
        title="Hammersmith City - Good service"
        titleNumberOfLines={1}
        underlayColor="white"
    />
    <ListItem
        chevronColor="#bdc6cf"
        disabled={false}
        hideChevron={false}
        leftIconUnderlayColor="white"
        rightIcon={
            Object {
                "name": "chevron-right",
              }
        }
        rightTitleNumberOfLines={1}
        roundAvatar={false}
        selectedBackgroundColor="grey"
        subtitleNumberOfLines={1}
        switchButton={false}
        textInputEditable={true}
        title="Jubilee - Good service"
        titleNumberOfLines={1}
        underlayColor="white"
    />
    <ListItem
        chevronColor="#bdc6cf"
        disabled={false}
        hideChevron={false}
        leftIconUnderlayColor="white"
        rightIcon={
            Object {
                "name": "chevron-right",
              }
        }
        rightTitleNumberOfLines={1}
        roundAvatar={false}
        selectedBackgroundColor="grey"
        subtitleNumberOfLines={1}
        switchButton={false}
        textInputEditable={true}
        title="Metropolitan - Good service"
        titleNumberOfLines={1}
        underlayColor="white"
    />
    <ListItem
        chevronColor="#bdc6cf"
        disabled={false}
        hideChevron={false}
        leftIconUnderlayColor="white"
        rightIcon={
            Object {
                "name": "chevron-right",
              }
        }
        rightTitleNumberOfLines={1}
        roundAvatar={false}
        selectedBackgroundColor="grey"
        subtitleNumberOfLines={1}
        switchButton={false}
        textInputEditable={true}
        title="Northern - Good service"
        titleNumberOfLines={1}
        underlayColor="white"
    />
    <ListItem
        chevronColor="#bdc6cf"
        disabled={false}
        hideChevron={false}
        leftIconUnderlayColor="white"
        rightIcon={
            Object {
                "name": "chevron-right",
              }
        }
        rightTitleNumberOfLines={1}
        roundAvatar={false}
        selectedBackgroundColor="grey"
        subtitleNumberOfLines={1}
        switchButton={false}
        textInputEditable={true}
        title="Piccadilly - Good service"
        titleNumberOfLines={1}
        underlayColor="white"
    />
    <ListItem
        chevronColor="#bdc6cf"
        disabled={false}
        hideChevron={false}
        leftIconUnderlayColor="white"
        rightIcon={
            Object {
                "name": "chevron-right",
              }
        }
        rightTitleNumberOfLines={1}
        roundAvatar={false}
        selectedBackgroundColor="grey"
        subtitleNumberOfLines={1}
        switchButton={false}
        textInputEditable={true}
        title="Victoria - Good service"
        titleNumberOfLines={1}
        underlayColor="white"
    />
    <ListItem
        chevronColor="#bdc6cf"
        disabled={false}
        hideChevron={false}
        leftIconUnderlayColor="white"
        rightIcon={
            Object {
                "name": "chevron-right",
              }
        }
        rightTitleNumberOfLines={1}
        roundAvatar={false}
        selectedBackgroundColor="grey"
        subtitleNumberOfLines={1}
        switchButton={false}
        textInputEditable={true}
        title="Waterloo City - Good service"
        titleNumberOfLines={1}
        underlayColor="white"
    />
</List>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <ListItem
          chevronColor="#bdc6cf"
          disabled={false}
          hideChevron={false}
          leftIconUnderlayColor="white"
          rightIcon={
                    Object {
                              "name": "chevron-right",
                            }
          }
          rightTitleNumberOfLines={1}
          roundAvatar={false}
          selectedBackgroundColor="grey"
          subtitleNumberOfLines={1}
          switchButton={false}
          textInputEditable={true}
          title="Bakerloo - Good service"
          titleNumberOfLines={1}
          underlayColor="white"
/>,
        <ListItem
          chevronColor="#bdc6cf"
          disabled={false}
          hideChevron={false}
          leftIconUnderlayColor="white"
          rightIcon={
                    Object {
                              "name": "chevron-right",
                            }
          }
          rightTitleNumberOfLines={1}
          roundAvatar={false}
          selectedBackgroundColor="grey"
          subtitleNumberOfLines={1}
          switchButton={false}
          textInputEditable={true}
          title="Central - Good service"
          titleNumberOfLines={1}
          underlayColor="white"
/>,
        <ListItem
          chevronColor="#bdc6cf"
          disabled={false}
          hideChevron={false}
          leftIconUnderlayColor="white"
          rightIcon={
                    Object {
                              "name": "chevron-right",
                            }
          }
          rightTitleNumberOfLines={1}
          roundAvatar={false}
          selectedBackgroundColor="grey"
          subtitleNumberOfLines={1}
          switchButton={false}
          textInputEditable={true}
          title="District - Good service"
          titleNumberOfLines={1}
          underlayColor="white"
/>,
        <ListItem
          chevronColor="#bdc6cf"
          disabled={false}
          hideChevron={false}
          leftIconUnderlayColor="white"
          rightIcon={
                    Object {
                              "name": "chevron-right",
                            }
          }
          rightTitleNumberOfLines={1}
          roundAvatar={false}
          selectedBackgroundColor="grey"
          subtitleNumberOfLines={1}
          switchButton={false}
          textInputEditable={true}
          title="Circle - Good service"
          titleNumberOfLines={1}
          underlayColor="white"
/>,
        <ListItem
          chevronColor="#bdc6cf"
          disabled={false}
          hideChevron={false}
          leftIconUnderlayColor="white"
          rightIcon={
                    Object {
                              "name": "chevron-right",
                            }
          }
          rightTitleNumberOfLines={1}
          roundAvatar={false}
          selectedBackgroundColor="grey"
          subtitleNumberOfLines={1}
          switchButton={false}
          textInputEditable={true}
          title="Hammersmith City - Good service"
          titleNumberOfLines={1}
          underlayColor="white"
/>,
        <ListItem
          chevronColor="#bdc6cf"
          disabled={false}
          hideChevron={false}
          leftIconUnderlayColor="white"
          rightIcon={
                    Object {
                              "name": "chevron-right",
                            }
          }
          rightTitleNumberOfLines={1}
          roundAvatar={false}
          selectedBackgroundColor="grey"
          subtitleNumberOfLines={1}
          switchButton={false}
          textInputEditable={true}
          title="Jubilee - Good service"
          titleNumberOfLines={1}
          underlayColor="white"
/>,
        <ListItem
          chevronColor="#bdc6cf"
          disabled={false}
          hideChevron={false}
          leftIconUnderlayColor="white"
          rightIcon={
                    Object {
                              "name": "chevron-right",
                            }
          }
          rightTitleNumberOfLines={1}
          roundAvatar={false}
          selectedBackgroundColor="grey"
          subtitleNumberOfLines={1}
          switchButton={false}
          textInputEditable={true}
          title="Metropolitan - Good service"
          titleNumberOfLines={1}
          underlayColor="white"
/>,
        <ListItem
          chevronColor="#bdc6cf"
          disabled={false}
          hideChevron={false}
          leftIconUnderlayColor="white"
          rightIcon={
                    Object {
                              "name": "chevron-right",
                            }
          }
          rightTitleNumberOfLines={1}
          roundAvatar={false}
          selectedBackgroundColor="grey"
          subtitleNumberOfLines={1}
          switchButton={false}
          textInputEditable={true}
          title="Northern - Good service"
          titleNumberOfLines={1}
          underlayColor="white"
/>,
        <ListItem
          chevronColor="#bdc6cf"
          disabled={false}
          hideChevron={false}
          leftIconUnderlayColor="white"
          rightIcon={
                    Object {
                              "name": "chevron-right",
                            }
          }
          rightTitleNumberOfLines={1}
          roundAvatar={false}
          selectedBackgroundColor="grey"
          subtitleNumberOfLines={1}
          switchButton={false}
          textInputEditable={true}
          title="Piccadilly - Good service"
          titleNumberOfLines={1}
          underlayColor="white"
/>,
        <ListItem
          chevronColor="#bdc6cf"
          disabled={false}
          hideChevron={false}
          leftIconUnderlayColor="white"
          rightIcon={
                    Object {
                              "name": "chevron-right",
                            }
          }
          rightTitleNumberOfLines={1}
          roundAvatar={false}
          selectedBackgroundColor="grey"
          subtitleNumberOfLines={1}
          switchButton={false}
          textInputEditable={true}
          title="Victoria - Good service"
          titleNumberOfLines={1}
          underlayColor="white"
/>,
        <ListItem
          chevronColor="#bdc6cf"
          disabled={false}
          hideChevron={false}
          leftIconUnderlayColor="white"
          rightIcon={
                    Object {
                              "name": "chevron-right",
                            }
          }
          rightTitleNumberOfLines={1}
          roundAvatar={false}
          selectedBackgroundColor="grey"
          subtitleNumberOfLines={1}
          switchButton={false}
          textInputEditable={true}
          title="Waterloo City - Good service"
          titleNumberOfLines={1}
          underlayColor="white"
/>,
      ],
      "style": Array [
        Object {
          "backgroundColor": "#ffffff",
          "borderColor": "#bbb",
          "borderTopWidth": 1,
          "marginTop": 20,
        },
        Object {
          "marginBottom": 20,
        },
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "BAKERLOO",
        "nodeType": "function",
        "props": Object {
          "chevronColor": "#bdc6cf",
          "disabled": false,
          "hideChevron": false,
          "leftIconUnderlayColor": "white",
          "rightIcon": Object {
            "name": "chevron-right",
          },
          "rightTitleNumberOfLines": 1,
          "roundAvatar": false,
          "selectedBackgroundColor": "grey",
          "subtitleNumberOfLines": 1,
          "switchButton": false,
          "textInputEditable": true,
          "title": "Bakerloo - Good service",
          "titleNumberOfLines": 1,
          "underlayColor": "white",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "CENTRAL",
        "nodeType": "function",
        "props": Object {
          "chevronColor": "#bdc6cf",
          "disabled": false,
          "hideChevron": false,
          "leftIconUnderlayColor": "white",
          "rightIcon": Object {
            "name": "chevron-right",
          },
          "rightTitleNumberOfLines": 1,
          "roundAvatar": false,
          "selectedBackgroundColor": "grey",
          "subtitleNumberOfLines": 1,
          "switchButton": false,
          "textInputEditable": true,
          "title": "Central - Good service",
          "titleNumberOfLines": 1,
          "underlayColor": "white",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "DISTRICT",
        "nodeType": "function",
        "props": Object {
          "chevronColor": "#bdc6cf",
          "disabled": false,
          "hideChevron": false,
          "leftIconUnderlayColor": "white",
          "rightIcon": Object {
            "name": "chevron-right",
          },
          "rightTitleNumberOfLines": 1,
          "roundAvatar": false,
          "selectedBackgroundColor": "grey",
          "subtitleNumberOfLines": 1,
          "switchButton": false,
          "textInputEditable": true,
          "title": "District - Good service",
          "titleNumberOfLines": 1,
          "underlayColor": "white",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "CIRCLE",
        "nodeType": "function",
        "props": Object {
          "chevronColor": "#bdc6cf",
          "disabled": false,
          "hideChevron": false,
          "leftIconUnderlayColor": "white",
          "rightIcon": Object {
            "name": "chevron-right",
          },
          "rightTitleNumberOfLines": 1,
          "roundAvatar": false,
          "selectedBackgroundColor": "grey",
          "subtitleNumberOfLines": 1,
          "switchButton": false,
          "textInputEditable": true,
          "title": "Circle - Good service",
          "titleNumberOfLines": 1,
          "underlayColor": "white",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "HAMMERSMITH",
        "nodeType": "function",
        "props": Object {
          "chevronColor": "#bdc6cf",
          "disabled": false,
          "hideChevron": false,
          "leftIconUnderlayColor": "white",
          "rightIcon": Object {
            "name": "chevron-right",
          },
          "rightTitleNumberOfLines": 1,
          "roundAvatar": false,
          "selectedBackgroundColor": "grey",
          "subtitleNumberOfLines": 1,
          "switchButton": false,
          "textInputEditable": true,
          "title": "Hammersmith City - Good service",
          "titleNumberOfLines": 1,
          "underlayColor": "white",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "JUBILEE",
        "nodeType": "function",
        "props": Object {
          "chevronColor": "#bdc6cf",
          "disabled": false,
          "hideChevron": false,
          "leftIconUnderlayColor": "white",
          "rightIcon": Object {
            "name": "chevron-right",
          },
          "rightTitleNumberOfLines": 1,
          "roundAvatar": false,
          "selectedBackgroundColor": "grey",
          "subtitleNumberOfLines": 1,
          "switchButton": false,
          "textInputEditable": true,
          "title": "Jubilee - Good service",
          "titleNumberOfLines": 1,
          "underlayColor": "white",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "METROPOLITAN",
        "nodeType": "function",
        "props": Object {
          "chevronColor": "#bdc6cf",
          "disabled": false,
          "hideChevron": false,
          "leftIconUnderlayColor": "white",
          "rightIcon": Object {
            "name": "chevron-right",
          },
          "rightTitleNumberOfLines": 1,
          "roundAvatar": false,
          "selectedBackgroundColor": "grey",
          "subtitleNumberOfLines": 1,
          "switchButton": false,
          "textInputEditable": true,
          "title": "Metropolitan - Good service",
          "titleNumberOfLines": 1,
          "underlayColor": "white",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "NORTHERN",
        "nodeType": "function",
        "props": Object {
          "chevronColor": "#bdc6cf",
          "disabled": false,
          "hideChevron": false,
          "leftIconUnderlayColor": "white",
          "rightIcon": Object {
            "name": "chevron-right",
          },
          "rightTitleNumberOfLines": 1,
          "roundAvatar": false,
          "selectedBackgroundColor": "grey",
          "subtitleNumberOfLines": 1,
          "switchButton": false,
          "textInputEditable": true,
          "title": "Northern - Good service",
          "titleNumberOfLines": 1,
          "underlayColor": "white",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "PICCADILLY",
        "nodeType": "function",
        "props": Object {
          "chevronColor": "#bdc6cf",
          "disabled": false,
          "hideChevron": false,
          "leftIconUnderlayColor": "white",
          "rightIcon": Object {
            "name": "chevron-right",
          },
          "rightTitleNumberOfLines": 1,
          "roundAvatar": false,
          "selectedBackgroundColor": "grey",
          "subtitleNumberOfLines": 1,
          "switchButton": false,
          "textInputEditable": true,
          "title": "Piccadilly - Good service",
          "titleNumberOfLines": 1,
          "underlayColor": "white",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "VICTORIA",
        "nodeType": "function",
        "props": Object {
          "chevronColor": "#bdc6cf",
          "disabled": false,
          "hideChevron": false,
          "leftIconUnderlayColor": "white",
          "rightIcon": Object {
            "name": "chevron-right",
          },
          "rightTitleNumberOfLines": 1,
          "roundAvatar": false,
          "selectedBackgroundColor": "grey",
          "subtitleNumberOfLines": 1,
          "switchButton": false,
          "textInputEditable": true,
          "title": "Victoria - Good service",
          "titleNumberOfLines": 1,
          "underlayColor": "white",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "WATERLOO",
        "nodeType": "function",
        "props": Object {
          "chevronColor": "#bdc6cf",
          "disabled": false,
          "hideChevron": false,
          "leftIconUnderlayColor": "white",
          "rightIcon": Object {
            "name": "chevron-right",
          },
          "rightTitleNumberOfLines": 1,
          "roundAvatar": false,
          "selectedBackgroundColor": "grey",
          "subtitleNumberOfLines": 1,
          "switchButton": false,
          "textInputEditable": true,
          "title": "Waterloo City - Good service",
          "titleNumberOfLines": 1,
          "underlayColor": "white",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <ListItem
            chevronColor="#bdc6cf"
            disabled={false}
            hideChevron={false}
            leftIconUnderlayColor="white"
            rightIcon={
                        Object {
                                    "name": "chevron-right",
                                  }
            }
            rightTitleNumberOfLines={1}
            roundAvatar={false}
            selectedBackgroundColor="grey"
            subtitleNumberOfLines={1}
            switchButton={false}
            textInputEditable={true}
            title="Bakerloo - Good service"
            titleNumberOfLines={1}
            underlayColor="white"
/>,
          <ListItem
            chevronColor="#bdc6cf"
            disabled={false}
            hideChevron={false}
            leftIconUnderlayColor="white"
            rightIcon={
                        Object {
                                    "name": "chevron-right",
                                  }
            }
            rightTitleNumberOfLines={1}
            roundAvatar={false}
            selectedBackgroundColor="grey"
            subtitleNumberOfLines={1}
            switchButton={false}
            textInputEditable={true}
            title="Central - Good service"
            titleNumberOfLines={1}
            underlayColor="white"
/>,
          <ListItem
            chevronColor="#bdc6cf"
            disabled={false}
            hideChevron={false}
            leftIconUnderlayColor="white"
            rightIcon={
                        Object {
                                    "name": "chevron-right",
                                  }
            }
            rightTitleNumberOfLines={1}
            roundAvatar={false}
            selectedBackgroundColor="grey"
            subtitleNumberOfLines={1}
            switchButton={false}
            textInputEditable={true}
            title="District - Good service"
            titleNumberOfLines={1}
            underlayColor="white"
/>,
          <ListItem
            chevronColor="#bdc6cf"
            disabled={false}
            hideChevron={false}
            leftIconUnderlayColor="white"
            rightIcon={
                        Object {
                                    "name": "chevron-right",
                                  }
            }
            rightTitleNumberOfLines={1}
            roundAvatar={false}
            selectedBackgroundColor="grey"
            subtitleNumberOfLines={1}
            switchButton={false}
            textInputEditable={true}
            title="Circle - Good service"
            titleNumberOfLines={1}
            underlayColor="white"
/>,
          <ListItem
            chevronColor="#bdc6cf"
            disabled={false}
            hideChevron={false}
            leftIconUnderlayColor="white"
            rightIcon={
                        Object {
                                    "name": "chevron-right",
                                  }
            }
            rightTitleNumberOfLines={1}
            roundAvatar={false}
            selectedBackgroundColor="grey"
            subtitleNumberOfLines={1}
            switchButton={false}
            textInputEditable={true}
            title="Hammersmith City - Good service"
            titleNumberOfLines={1}
            underlayColor="white"
/>,
          <ListItem
            chevronColor="#bdc6cf"
            disabled={false}
            hideChevron={false}
            leftIconUnderlayColor="white"
            rightIcon={
                        Object {
                                    "name": "chevron-right",
                                  }
            }
            rightTitleNumberOfLines={1}
            roundAvatar={false}
            selectedBackgroundColor="grey"
            subtitleNumberOfLines={1}
            switchButton={false}
            textInputEditable={true}
            title="Jubilee - Good service"
            titleNumberOfLines={1}
            underlayColor="white"
/>,
          <ListItem
            chevronColor="#bdc6cf"
            disabled={false}
            hideChevron={false}
            leftIconUnderlayColor="white"
            rightIcon={
                        Object {
                                    "name": "chevron-right",
                                  }
            }
            rightTitleNumberOfLines={1}
            roundAvatar={false}
            selectedBackgroundColor="grey"
            subtitleNumberOfLines={1}
            switchButton={false}
            textInputEditable={true}
            title="Metropolitan - Good service"
            titleNumberOfLines={1}
            underlayColor="white"
/>,
          <ListItem
            chevronColor="#bdc6cf"
            disabled={false}
            hideChevron={false}
            leftIconUnderlayColor="white"
            rightIcon={
                        Object {
                                    "name": "chevron-right",
                                  }
            }
            rightTitleNumberOfLines={1}
            roundAvatar={false}
            selectedBackgroundColor="grey"
            subtitleNumberOfLines={1}
            switchButton={false}
            textInputEditable={true}
            title="Northern - Good service"
            titleNumberOfLines={1}
            underlayColor="white"
/>,
          <ListItem
            chevronColor="#bdc6cf"
            disabled={false}
            hideChevron={false}
            leftIconUnderlayColor="white"
            rightIcon={
                        Object {
                                    "name": "chevron-right",
                                  }
            }
            rightTitleNumberOfLines={1}
            roundAvatar={false}
            selectedBackgroundColor="grey"
            subtitleNumberOfLines={1}
            switchButton={false}
            textInputEditable={true}
            title="Piccadilly - Good service"
            titleNumberOfLines={1}
            underlayColor="white"
/>,
          <ListItem
            chevronColor="#bdc6cf"
            disabled={false}
            hideChevron={false}
            leftIconUnderlayColor="white"
            rightIcon={
                        Object {
                                    "name": "chevron-right",
                                  }
            }
            rightTitleNumberOfLines={1}
            roundAvatar={false}
            selectedBackgroundColor="grey"
            subtitleNumberOfLines={1}
            switchButton={false}
            textInputEditable={true}
            title="Victoria - Good service"
            titleNumberOfLines={1}
            underlayColor="white"
/>,
          <ListItem
            chevronColor="#bdc6cf"
            disabled={false}
            hideChevron={false}
            leftIconUnderlayColor="white"
            rightIcon={
                        Object {
                                    "name": "chevron-right",
                                  }
            }
            rightTitleNumberOfLines={1}
            roundAvatar={false}
            selectedBackgroundColor="grey"
            subtitleNumberOfLines={1}
            switchButton={false}
            textInputEditable={true}
            title="Waterloo City - Good service"
            titleNumberOfLines={1}
            underlayColor="white"
/>,
        ],
        "style": Array [
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#bbb",
            "borderTopWidth": 1,
            "marginTop": 20,
          },
          Object {
            "marginBottom": 20,
          },
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "BAKERLOO",
          "nodeType": "function",
          "props": Object {
            "chevronColor": "#bdc6cf",
            "disabled": false,
            "hideChevron": false,
            "leftIconUnderlayColor": "white",
            "rightIcon": Object {
              "name": "chevron-right",
            },
            "rightTitleNumberOfLines": 1,
            "roundAvatar": false,
            "selectedBackgroundColor": "grey",
            "subtitleNumberOfLines": 1,
            "switchButton": false,
            "textInputEditable": true,
            "title": "Bakerloo - Good service",
            "titleNumberOfLines": 1,
            "underlayColor": "white",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "CENTRAL",
          "nodeType": "function",
          "props": Object {
            "chevronColor": "#bdc6cf",
            "disabled": false,
            "hideChevron": false,
            "leftIconUnderlayColor": "white",
            "rightIcon": Object {
              "name": "chevron-right",
            },
            "rightTitleNumberOfLines": 1,
            "roundAvatar": false,
            "selectedBackgroundColor": "grey",
            "subtitleNumberOfLines": 1,
            "switchButton": false,
            "textInputEditable": true,
            "title": "Central - Good service",
            "titleNumberOfLines": 1,
            "underlayColor": "white",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "DISTRICT",
          "nodeType": "function",
          "props": Object {
            "chevronColor": "#bdc6cf",
            "disabled": false,
            "hideChevron": false,
            "leftIconUnderlayColor": "white",
            "rightIcon": Object {
              "name": "chevron-right",
            },
            "rightTitleNumberOfLines": 1,
            "roundAvatar": false,
            "selectedBackgroundColor": "grey",
            "subtitleNumberOfLines": 1,
            "switchButton": false,
            "textInputEditable": true,
            "title": "District - Good service",
            "titleNumberOfLines": 1,
            "underlayColor": "white",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "CIRCLE",
          "nodeType": "function",
          "props": Object {
            "chevronColor": "#bdc6cf",
            "disabled": false,
            "hideChevron": false,
            "leftIconUnderlayColor": "white",
            "rightIcon": Object {
              "name": "chevron-right",
            },
            "rightTitleNumberOfLines": 1,
            "roundAvatar": false,
            "selectedBackgroundColor": "grey",
            "subtitleNumberOfLines": 1,
            "switchButton": false,
            "textInputEditable": true,
            "title": "Circle - Good service",
            "titleNumberOfLines": 1,
            "underlayColor": "white",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "HAMMERSMITH",
          "nodeType": "function",
          "props": Object {
            "chevronColor": "#bdc6cf",
            "disabled": false,
            "hideChevron": false,
            "leftIconUnderlayColor": "white",
            "rightIcon": Object {
              "name": "chevron-right",
            },
            "rightTitleNumberOfLines": 1,
            "roundAvatar": false,
            "selectedBackgroundColor": "grey",
            "subtitleNumberOfLines": 1,
            "switchButton": false,
            "textInputEditable": true,
            "title": "Hammersmith City - Good service",
            "titleNumberOfLines": 1,
            "underlayColor": "white",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "JUBILEE",
          "nodeType": "function",
          "props": Object {
            "chevronColor": "#bdc6cf",
            "disabled": false,
            "hideChevron": false,
            "leftIconUnderlayColor": "white",
            "rightIcon": Object {
              "name": "chevron-right",
            },
            "rightTitleNumberOfLines": 1,
            "roundAvatar": false,
            "selectedBackgroundColor": "grey",
            "subtitleNumberOfLines": 1,
            "switchButton": false,
            "textInputEditable": true,
            "title": "Jubilee - Good service",
            "titleNumberOfLines": 1,
            "underlayColor": "white",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "METROPOLITAN",
          "nodeType": "function",
          "props": Object {
            "chevronColor": "#bdc6cf",
            "disabled": false,
            "hideChevron": false,
            "leftIconUnderlayColor": "white",
            "rightIcon": Object {
              "name": "chevron-right",
            },
            "rightTitleNumberOfLines": 1,
            "roundAvatar": false,
            "selectedBackgroundColor": "grey",
            "subtitleNumberOfLines": 1,
            "switchButton": false,
            "textInputEditable": true,
            "title": "Metropolitan - Good service",
            "titleNumberOfLines": 1,
            "underlayColor": "white",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "NORTHERN",
          "nodeType": "function",
          "props": Object {
            "chevronColor": "#bdc6cf",
            "disabled": false,
            "hideChevron": false,
            "leftIconUnderlayColor": "white",
            "rightIcon": Object {
              "name": "chevron-right",
            },
            "rightTitleNumberOfLines": 1,
            "roundAvatar": false,
            "selectedBackgroundColor": "grey",
            "subtitleNumberOfLines": 1,
            "switchButton": false,
            "textInputEditable": true,
            "title": "Northern - Good service",
            "titleNumberOfLines": 1,
            "underlayColor": "white",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "PICCADILLY",
          "nodeType": "function",
          "props": Object {
            "chevronColor": "#bdc6cf",
            "disabled": false,
            "hideChevron": false,
            "leftIconUnderlayColor": "white",
            "rightIcon": Object {
              "name": "chevron-right",
            },
            "rightTitleNumberOfLines": 1,
            "roundAvatar": false,
            "selectedBackgroundColor": "grey",
            "subtitleNumberOfLines": 1,
            "switchButton": false,
            "textInputEditable": true,
            "title": "Piccadilly - Good service",
            "titleNumberOfLines": 1,
            "underlayColor": "white",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "VICTORIA",
          "nodeType": "function",
          "props": Object {
            "chevronColor": "#bdc6cf",
            "disabled": false,
            "hideChevron": false,
            "leftIconUnderlayColor": "white",
            "rightIcon": Object {
              "name": "chevron-right",
            },
            "rightTitleNumberOfLines": 1,
            "roundAvatar": false,
            "selectedBackgroundColor": "grey",
            "subtitleNumberOfLines": 1,
            "switchButton": false,
            "textInputEditable": true,
            "title": "Victoria - Good service",
            "titleNumberOfLines": 1,
            "underlayColor": "white",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "WATERLOO",
          "nodeType": "function",
          "props": Object {
            "chevronColor": "#bdc6cf",
            "disabled": false,
            "hideChevron": false,
            "leftIconUnderlayColor": "white",
            "rightIcon": Object {
              "name": "chevron-right",
            },
            "rightTitleNumberOfLines": 1,
            "roundAvatar": false,
            "selectedBackgroundColor": "grey",
            "subtitleNumberOfLines": 1,
            "switchButton": false,
            "textInputEditable": true,
            "title": "Waterloo City - Good service",
            "titleNumberOfLines": 1,
            "underlayColor": "white",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
